tests/baselines/reference/reverseMappedInferenceWithCircularConstraint.errors.txt
reverseMappedInferenceWithCircularConstraint.ts(47,3): error TS2322: Type '"unknown"' is not assignable to type '"pending"'.


==== reverseMappedInferenceWithCircularConstraint.ts (1 errors) ====
    // repro from https://github.com/microsoft/TypeScript/issues/48798
    
    type AnyFunction = (...args: any[]) => any;
    
    type InferNarrowest<T> = T extends any
      ? T extends AnyFunction
        ? T
        : T extends object
        ? InferNarrowestObject<T>
        : T
      : never;
    
    type InferNarrowestObject<T> = {
      readonly [K in keyof T]: InferNarrowest<T[K]>;
    };
    
    type Config<TGlobal, TState = Prop<TGlobal, "states">> = {
      states: {
        [StateKey in keyof TState]: {
          on?: {};
        };
      };
    } & {
      initial: keyof TState;
    };
    
    type Prop<T, K> = K extends keyof T ? T[K] : never;
    
    const createMachine = <TConfig extends Config<TConfig>>(
      _config: InferNarrowestObject<TConfig>
    ): void => {};
    
    createMachine({
      initial: "pending",
      states: {
        pending: {
          on: {
            done() {
              return "noData";
            },
          },
        },
      },
    });
    
    createMachine({
      initial: "unknown", // error
      ~~~~~~~
!!! error TS2322: Type '"unknown"' is not assignable to type '"pending"'.
!!! related TS6500 reverseMappedInferenceWithCircularConstraint.ts:24:3: The expected type comes from property 'initial' which is declared here on type 'InferNarrowestObject<Config<{ initial: "unknown"; states: { pending: { on: { done: unknown; }; }; }; }, { pending: { on: { done: unknown; }; }; }>>'
      states: {
        pending: {
          on: {
            done() {
              return "noData";
            },
          },
        },
      },
    });
    